PixelFantasy/css/index.css
/* ... */
table {
  border-collapse: collapse;
  border-spacing: 0;
}

* {
  padding: 0;
  margin: 0;
  list-style: none;
  box-sizing: border-box;
  text-decoration-line: none;
  font-family: monospace !important;
  transition: all 0.2s ease;
}
*:hover {
  transition: all 0.2s ease;
}

html, body, .container {
  height: 100%;
  font-size: 1rem;
}

body {
  position: absolute;
  right: 0px;
  width: 100%;
  background-color: #ffffff;
}

.offset-260 {
  right: 260px !important;
}

.container {
  max-width: 1790px;
  margin: 0 auto;
  padding-top: 40px;
}

@media (max-width: 768px) {
  .container {
    padding-top: 0px;
  }
}
.containerScrollHidden {
  overflow: hidden;
}

.nav {
  float: left;
  width: 25%;
  height: auto;
  padding: 0 10px;
  font-size: 20px;
  text-align: right;
  color: rgba(0, 0, 0, 0.4);
  zoom: 1;
}
.nav:before {
  content: "";
  display: table;
}
.nav:after {
  content: "";
  display: table;
  clear: both;
}
.nav h1 {
  height: inherit;
  font-size: 30px;
  font-weight: bold;
  height: 57px;
}
.nav h1 img {
  width: 165px;
  height: 57px;
}
.nav-list {
  font-size: 16px;
  color: rgba(0, 0, 0, 0.4);
  margin: 25px 0;
}
.nav-list li {
  display: block;
  color: inherit;
  padding: 3px 8px;
}
.nav-list li[ref] {
  cursor: pointer;
}
.nav-list li[ref]:hover {
  transition: all 0.2s ease;
  color: #000;
}
.nav-list li[ref].active {
  color: #000;
}
.nav-list-m {
  display: none;
  width: 1.5em;
  height: 57px;
  position: absolute;
  left: -3em;
  top: 0px;
}
.nav-list-m img {
  width: inherit;
  height: inherit;
}
.nav-list-m img.close {
  display: none;
}
.nav-list-pixel li {
  border-right: 1px solid rgba(0, 0, 0, 0.2);
  margin-right: 18px;
}
.nav-list-pixel li::after {
  content: "-";
  font-size: 12px;
  margin-left: 4px;
}

.offset-0 {
  right: 0px !important;
}

@media (max-width: 768px) {
  .nav {
    padding: 20px;
    width: 260px;
    height: 100%;
    position: fixed;
    right: -260px;
    text-align: left;
    background-color: black;
    color: white !important;
  }
  .nav h1 img {
    width: 100%;
    height: auto;
    image-rendering: pixelated;
  }
  .nav-list {
    font-size: 1.5rem;
    color: rgba(255, 255, 255, 0.4);
  }
  .nav-list li[ref]:hover {
    color: white;
  }
  .nav-list li[ref].active {
    color: white;
  }
  .nav-list-m {
    display: block;
  }
  .nav-list-pixel li {
    border-left: 1px solid rgba(255, 255, 255, 0.5);
    margin-left: 18px;
  }
  .nav-list-pixel li::before {
    content: "-";
    font-size: 12px;
    margin-right: 4px;
  }
  .nav-list-pixel li::after {
    display: none;
  }
}
.headline {
  font-size: 1.6em;
  text-align: left;
  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
  margin-bottom: 25px;
  height: 57px;
  line-height: 57px;
}

.newsInfo_Table {
  color: rgba(0, 0, 0, 0.5);
  font-size: 16px;
  font-weight: 100;
}
.newsInfo_Table tr:hover {
  color: rgb(0, 0, 0);
}
.newsInfo_Table tr:nth-child(1) td:nth-child(1) {
  color: #008B8B;
}

#newsMore_Line .more {
  color: rgba(0, 0, 0, 0.5);
  font-size: 16px;
  font-weight: 100;
}
#newsMore_Line .more:hover {
  color: red;
}

[id$=Work] {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.pixelart_Thumbnail {
  cursor: pointer;
  position: relative;
  margin: 10px;
  float: left;
  width: 200px;
  height: 200px;
  border: 1px solid #cccccc;
  padding: 2px;
  box-shadow: 0 0 4px -2px;
  overflow: hidden;
}
.pixelart_Thumbnail img {
  width: 100% !important;
  height: auto !important;
  transform: scale(4) translateZ(0);
  -webkit-transform: scale(4) translateZ(0);
  position: absolute;
  top: 135%;
  left: 5%;
}
.pixelart_Thumbnail:hover img {
  transform: scale(5) translateZ(0);
  -webkit-transform: scale(5) translateZ(0);
  top: 180%;
}

.filling-empty-space-childs {
  width: 200px;
  height: 0;
  margin: 0 10px;
  padding: 0 2px;
}

#animalWork .pixelart_Thumbnail img, #vehicleWork .pixelart_Thumbnail img {
  transform: none;
  -webkit-transform: none;
  position: initial;
  top: 0px;
  left: 0px;
  image-rendering: pixelated;
}

#showBox {
  display: none;
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
}
#showBox .showBoxBackGround {
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.8);
}
#showBox .showBoxContainer {
  text-align: center;
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
  padding: 0 8px;
  box-sizing: border-box;
  overflow: auto;
}
#showBox .showBoxContainer .showBoxClose {
  cursor: pointer;
  position: absolute;
  top: 10px;
  left: 10px;
  font-size: 35px;
  width: 50px;
  height: 50px;
  text-align: center;
  line-height: 50px;
  color: #fff;
  z-index: 1;
}
#showBox .showBoxContainer .showBoxCover {
  position: relative;
  width: 900px;
  height: 900px;
  margin: 100px auto;
}
#showBox .showBoxContainer .showBoxCover .showBoxTitleWrap {
  position: absolute;
  width: inherit;
  height: inherit;
}
#showBox .showBoxContainer .showBoxCover .showBoxTitleWrap .showBoxTitleBox {
  position: absolute;
  width: inherit;
  height: inherit;
  overflow: hidden;
  top: -10px;
  right: -10px;
}
#showBox .showBoxContainer .showBoxCover .showBoxTitleWrap .showBoxTitleBox::before, #showBox .showBoxContainer .showBoxCover .showBoxTitleWrap .showBoxTitleBox::after {
  position: absolute;
  content: "";
  display: block;
  border: 5px solid rgba(0, 139, 139, 0.5);
}
#showBox .showBoxContainer .showBoxCover .showBoxTitleWrap .showBoxTitleBox::before {
  top: 0;
  right: 200px;
  transform: translateX(-30%);
}
#showBox .showBoxContainer .showBoxCover .showBoxTitleWrap .showBoxTitleBox::after {
  top: 200px;
  right: 0;
  transform: translateY(30%);
}
#showBox .showBoxContainer .showBoxCover .showBoxTitleWrap .showBoxTitleBox .showBoxTitle {
  width: 300px;
  padding: 30px;
  background-color: rgb(0, 139, 139);
  text-align: center;
  color: #fff;
  transform: rotate(45deg);
  position: absolute;
  top: 40px;
  right: -70px;
}
/* ... */

